fix overflow x again

--- a/styles.css
+++ b/styles.css
@@ -81,9 +81,11 @@ select {
 /* Navbar                                                   */
 /* -------------------------------------------------------- */
 
+html, body {
+    overflow-x: hidden;
+}
 
-
-.site-wrapper {
+.siteWrapper {
     overflow-x: hidden;
 }
 
@@ -255,9 +257,9 @@ nav {
     -moz-text-fill-color: transparent;
 }
 
-.iframe-container{
-
-
+.videoWrapper{
+    position: relative;
+    padding-bottom: 56.25%;
   }
   
 
